--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -35,3 +35,45 @@
 .slide-out {
   animation: slide-out 1s ease-out forwards;
 }
+
+.flipped{
+  transform: rotateY(180deg)
+}
+
+.flip-card {
+  border-radius: 90%;
+  background-color: transparent;
+  width: 125px;
+  height: 200px;
+  perspective: 1000px;
+}
+
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+}
+
+/* Position the front and back side */
+.flip-card-front, .flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden; /* Safari */
+  backface-visibility: hidden;
+}
+
+/* Style the front side (fallback if image is missing) */
+.flip-card-front {
+  color: black;
+}
+
+/* Style the back side */
+.flip-card-back {
+  background-color:#201f1f;
+  color: white;
+  transform: rotateY(180deg);
+}
